# gf2

./: .clang-format  .gitignore  BitArray_8h.html  BitArray_8h.js  BitArray_8h_source.html  BitGauss_8h.html  BitGauss_8h.js  BitGauss_8h_source.html  BitLU_8h.html  BitLU_8h.js  BitLU_8h_source.html  BitMat_8h.html  BitMat_8h.js  BitMat_8h_source.html  BitMatrix_8h.html  BitMatrix_8h.js  BitMatrix_8h_source.html  BitPoly_8h.html  BitPoly_8h.js  BitPoly_8h_source.html  BitPolynomial_8h.html  BitPolynomial_8h.js  BitPolynomial_8h_source.html  BitRef_8h.html  BitRef_8h.js  BitRef_8h_source.html  BitSet_8h.html  BitSet_8h.js  BitSet_8h_source.html  BitSpan_8h.html  BitSpan_8h.js  BitSpan_8h_source.html  BitStore_8h.html  BitStore_8h.js  BitStore_8h_source.html  BitVec_8h.html  BitVec_8h.js  BitVec_8h_source.html  BitVector_8h.html  BitVector_8h.js  (+246 more)
.github/: doxygen-publish.yml
.github/workflows/: archive.yml
cmake/: add_executables.cmake
docs/: Doxyfile
docs/images/: bit-span.graffle
docs/pages/: BitArray.md  BitGauss.md  BitLU.md  BitMat.md  BitMatrix.md  BitPoly.md  BitPolynomial.md  BitRef.md  BitSet.md  BitSpan.md  BitStore.md  BitVec.md  BitVector.md  Iterators.md  Unsigned.md  assert.md  unsigned_word.md
docs/pages/Notes/: Danilevsky.md  GF2.md  Introduction.md  Reduction.md
docs/site/: _bit_gauss_8h.js  _bit_l_u_8h.js  _bit_l_u_8h_source.html  _bit_mat_8h.html  _bit_mat_8h_source.html  _bit_poly_8h.html  _bit_poly_8h.js  _bit_ref_8h.html  _bit_ref_8h.js  _bit_ref_8h_source.html  _bit_set_8h_source.html  _bit_store_8h.html  _bit_store_8h.js  _bit_store_8h_source.html  _bit_vec_8h.html  _danilevsky.html  _iterators_8h.html  _iterators_8h.js  _reduction.html  annotated.html  annotated_dup.js  classes.html  classgf2_1_1_bit_gauss-members.html  classgf2_1_1_bit_gauss.js  classgf2_1_1_bit_l_u.js  classgf2_1_1_bit_mat.html  classgf2_1_1_bit_poly-members.html  classgf2_1_1_bit_poly.js  classgf2_1_1_bit_ref.html  classgf2_1_1_bit_set-members.html  classgf2_1_1_bit_set.html  classgf2_1_1_bit_span.html  classgf2_1_1_bit_span.js  classgf2_1_1_bit_store.html  classgf2_1_1_bit_store.js  classgf2_1_1_bit_vec.html  classgf2_1_1_bits_iter-members.html  classgf2_1_1_set_bits_iter-members.html  classgf2_1_1_unset_bits_iter-members.html  classgf2_1_1_unset_bits_iter.html  (+83 more)
docs/site/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1c.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  (+40 more)
docs/theme/: doxygen.css  footer.html  header.html
doxytests/: README.md  doxy_BitArray.cpp  doxy_BitGauss.cpp  doxy_BitLU.cpp  doxy_BitMat.cpp  doxy_BitMatrix.cpp  doxy_BitPoly.cpp  doxy_BitPolynomial.cpp  doxy_BitRef.cpp  doxy_BitSet.cpp  doxy_BitSpan.cpp  doxy_BitStore.cpp  doxy_BitVec.cpp  doxy_BitVector.cpp  doxy_Iterators.cpp  doxy_RNG.cpp  doxy_Unsigned.cpp  doxy_assert.cpp  doxy_gf2.cpp  doxy_namespace.cpp  doxy_store_word.cpp  doxy_unsigned_word.cpp  doxytests.cpp
examples/: charpoly.py  charpoly01.cpp  charpoly02.cpp  convolve01.cpp  convolve02.cpp  convolve03.cpp  convolve04.cpp  copy01.cpp  describe01.cpp  dot01.cpp  dot02.cpp  dot03.cpp  dot04.cpp  gauss01.cpp  inverse01.cpp  iterators01.cpp  lu01.cpp  lu02.cpp  lu03.cpp  naive.h  poly01.cpp  random01.cpp  reduce01.cpp  reduce02.cpp  set01.cpp  shift01.cpp  shift02.cpp  span01.cpp  string01.cpp  string02.cpp  string03.cpp  string04.cpp
include/gf2/: BitArray.h  BitGauss.h  BitLU.h  BitMat.h  BitMatrix.h  BitPoly.h  BitPolynomial.h  BitRef.h  BitSet.h  BitSpan.h  BitStore.h  BitVec.h  BitVector.h  Iterators.h  RNG.h  Unsigned.h  assert.h  gf2.h  namespace.h  store_word.h  unsigned_word.h
modules/: CMakeLists.txt  gf2.cppm
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  concepts_0.js  concepts_1.js  defines_0.js  files_1.js  files_3.js  files_5.js  functions_0.js  (+55 more)
